--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="skill-row">
             <img class= "skill-img1" src="laptop.png" alt="">
             <h3>Coding and Development</h3>
-            <p>I can design beautiful websites using HTML and CSS. I can code in languages such as C++ and C.</p>
+            <p>I can design beautiful responsive websites using HTML, CSS and Bootstrap. I can code in languages such as C++ and C.</p>
           </div>
           <div class="skill-row">
             <img class="skill-img2" src="game-controller.png" alt="">
